--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,8 @@ header {
     background-color: #000; }
     header .full-screen-slider-block .header-slider li img {
       opacity: 0.7; }
+    header .full-screen-slider-block .header-slider li .description {
+      display: none; }
   header .full-screen-slider-block .slide-caption {
     min-height: 200px;
     z-index: 2;
@@ -43,7 +45,7 @@ header {
     header .full-screen-slider-block .slide-caption .title {
       font-size: 4rem;
       text-transform: capitalize;
-      margin-bottom: 3rem; }
+      margin-bottom: 2rem; }
     header .full-screen-slider-block .slide-caption .desc {
       font-size: 1.2rem;
       line-height: 1.4; }
@@ -220,17 +222,42 @@ footer {
   width: 60%; }
 
 .showInSP {
-  display: none; }
+  display: none !important; }
 
 .showInPC {
-  display: block; }
+  display: block !important; }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1020px) {
+  header .full-screen-slider-block .slide-caption {
+    bottom: 3%;
+    width: 60%; } }
+@media screen and (max-width: 880px) {
+  aside h1 {
+    width: 120px;
+    margin: 1.5rem 0 1.68rem 0; }
+
+  header .full-screen-slider-block .slide-caption .title {
+    font-size: 3rem;
+    margin-bottom: 1rem; } }
+@media screen and (max-width: 770px) {
+  nav ul a {
+    padding: 0 6px; }
+
+  header .full-screen-slider-block .slick-dots {
+    bottom: 5%; }
+  header .full-screen-slider-block .slide-caption {
+    bottom: 0%;
+    min-height: 155px; }
+    header .full-screen-slider-block .slide-caption .title {
+      font-size: 2rem; }
+    header .full-screen-slider-block .slide-caption .desc {
+      font-size: 1rem; } }
+@media screen and (max-width: 660px) {
   .showInSP {
-    display: block; }
+    display: block !important; }
 
   .showInPC {
-    display: none; }
+    display: none !important; }
 
   header {
     padding-top: 4rem; }
@@ -379,5 +406,17 @@ footer {
 
   .grid-item--width3 {
     width: 100%; } }
+@media screen and (max-width: 500px) {
+  .slide-caption .description .desc {
+    display: none !important; }
+
+  header .full-screen-slider-block .slick-dots {
+    bottom: 8%; } }
+@media screen and (max-width: 400px) {
+  .copyRight .company,
+  .copyRight .designer {
+    float: none !important; }
+  .copyRight .company {
+    margin-bottom: 1rem; } }
 
 /*# sourceMappingURL=style.css.map */
