--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,8 @@ $color-Theme-light: #9cff57;
 $color-Theme-dark: #FF1B23;
 $color-Theme-complement: #64dd17;
 $color-Theme-complement-dark: #1faa00;
+$common-Text-Font-Large: 1.2rem;
+$common-Text-Font-Medium: 1rem;
 
 
 @mixin translate($x,$y){
@@ -80,6 +82,9 @@ header{
 			img{
 				opacity: 0.7;
 			}
+			.description{
+				display: none;
+			}
 		}
 		.slide-caption{
 			min-height: 200px;
@@ -92,10 +97,10 @@ header{
 			.title{
 			    font-size: 4rem;
 			    text-transform: capitalize;
-			    margin-bottom: 3rem;
+			    margin-bottom: 2rem;
 			}
 			.desc{
-				font-size: 1.2rem;
+				font-size: $common-Text-Font-Large;
 	    		line-height: 1.4;
 			}
 		}
@@ -334,19 +339,60 @@ footer{
 $slider-dot-size: 5px;
 
 .showInSP{
-	display:none;
+	display:none!important;
 }
 .showInPC{
-	display:block;
+	display:block!important;
 }
-@media screen and (max-width: 480px) {
 
-.showInSP{
-	display:block;
+@media screen and (max-width: 1020px) {
+	header .full-screen-slider-block .slide-caption{
+		bottom: 3%;
+		width: 60%;
+	}
 }
-.showInPC{
-	display:none;
+
+@media screen and (max-width: 880px) {
+	aside h1{
+	    width: 120px;
+	    margin: 1.5rem 0 1.68rem 0;
+	}
+	header .full-screen-slider-block .slide-caption{
+		.title{
+			font-size: 3rem;
+			margin-bottom: 1rem;
+		}
+	}
 }
+@media screen and (max-width: 770px) {
+	nav ul a {
+		padding: 0 6px;
+	}
+	header .full-screen-slider-block{
+		.slick-dots{
+			bottom: 5%;
+		}
+		.slide-caption{
+			bottom: 0%;
+			min-height: 155px;
+			.title{
+				font-size: 2rem;
+			}
+			.desc{
+				font-size: $common-Text-Font-Medium;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 660px) {
+
+	.showInSP{
+		display:block!important;
+	}
+	.showInPC{
+		display:none!important;
+	}
 	header{
 		padding-top: 4rem;
 		.sp-toolbar{
@@ -542,4 +588,23 @@ $slider-dot-size: 5px;
 	.grid-item--width2 { width:  50%; }
 	.grid-item--width3 { width:  100%; }
 
+}
+@media screen and (max-width: 500px){
+	.slide-caption .description .desc{
+		display: none!important;
+	}
+	header .full-screen-slider-block .slick-dots {
+		bottom: 8%;
+	}
+}
+@media screen and (max-width: 400px){
+	.copyRight{
+		.company,
+		.designer{
+			float: none!important;
+		}
+		.company{
+			margin-bottom: 1rem;
+		}
+	}
 }
