--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,14 @@ a {
   a:hover {
     color: #64dd17; }
 
+.card.custom01 {
+  position: relative;
+  padding-bottom: 54px; }
+  .card.custom01 .card-action {
+    position: absolute;
+    bottom: 0;
+    width: 100%; }
+
 .container {
   max-width: 1450px;
   width: 83.33333%; }
@@ -18,6 +26,41 @@ header .full-screen-slider-block .slick-prev:before, header .full-screen-slider-
   width: 30px;
   height: 75px;
   display: block; }
+
+.black-bg {
+  background-color: #000; }
+
+.opac07 {
+  opacity: 0.7; }
+
+.parallax-container {
+  display: table;
+  width: 100%; }
+  .parallax-container .parralax-text {
+    color: #fff;
+    text-align: right;
+    text-shadow: 1px 1px 50px #000000;
+    display: table-cell;
+    vertical-align: middle; }
+    .parallax-container .parralax-text .text-container {
+      width: 980px;
+      margin: 0 auto; }
+      .parallax-container .parralax-text .text-container .title {
+        max-width: 575px;
+        margin-left: auto; }
+        .parallax-container .parralax-text .text-container .title:after {
+          content: "";
+          display: block;
+          border-bottom: 2px solid #fff;
+          width: 71px;
+          margin: 20px 0 16px auto; }
+  .parallax-container:nth-of-type(2n+2) .parralax-text {
+    text-align: left; }
+    .parallax-container:nth-of-type(2n+2) .parralax-text .text-container .title {
+      max-width: 575px;
+      margin-left: 0; }
+      .parallax-container:nth-of-type(2n+2) .parralax-text .text-container .title:after {
+        margin: 20px 0 16px 0; }
 
 header {
   position: relative; }
@@ -138,58 +181,8 @@ aside {
 .pb0 {
   padding-bottom: 0; }
 
-main section {
-  padding: 3rem 0;
-  overflow: hidden;
-  background-color: #fff; }
-  main section:nth-child(2n+2) {
-    background-color: #f8f8f8; }
-  main section:nth-child(3n+3) {
-    background-color: #f1f1f1; }
-  main section:nth-child(4n+1) {
-    background-color: #fff; }
-main h2 {
-  text-align: center;
-  font-size: 3.5rem;
-  margin: 0 0 3.68rem 0;
-  color: #ee6e73; }
-  main h2:after {
-    content: "";
-    display: block;
-    border-bottom: 2px solid #FF1B23;
-    width: 100px;
-    padding-top: 20px;
-    margin: 0 auto; }
-main h3 {
-  font-size: 2.5rem; }
-
-footer {
-  color: #fff;
-  background-color: #282828; }
-  footer .footer-info-block {
-    padding: 24px 0 14px; }
-    footer .footer-info-block h3 {
-      margin-bottom: 2rem;
-      font-size: 1.7rem; }
-    footer .footer-info-block i, footer .footer-info-block p, footer .footer-info-block .social-media {
-      color: #ababab;
-      line-height: 2;
-      font-size: 1rem;
-      margin-bottom: 10px; }
-    footer .footer-info-block .row.col {
-      padding: 1.75rem 0 1.5rem; }
-    footer .footer-info-block .contactInfoBlock {
-      position: relative; }
-      footer .footer-info-block .contactInfoBlock i {
-        position: absolute;
-        font-size: 29px;
-        top: -15px; }
-      footer .footer-info-block .contactInfoBlock p, footer .footer-info-block .contactInfoBlock ul {
-        padding-left: 42px; }
-  footer .copyRight {
-    background-color: #000;
-    overflow: hidden;
-    padding: 22px 0px 5px; }
+.lh0 {
+  line-height: 0; }
 
 .samples .gallery {
   padding: 0 2rem; }
@@ -227,10 +220,66 @@ footer {
 .showInPC {
   display: block !important; }
 
+main section {
+  padding: 3rem 0;
+  overflow: hidden;
+  background-color: #fff; }
+  main section:nth-child(2n+2) {
+    background-color: #f8f8f8; }
+  main section:nth-child(3n+3) {
+    background-color: #f1f1f1; }
+  main section:nth-child(4n+1) {
+    background-color: #fff; }
+main h2 {
+  text-align: center;
+  font-size: 3.5rem;
+  margin: 0 0 3.68rem 0;
+  color: #ee6e73; }
+  main h2:after {
+    content: "";
+    display: block;
+    border-bottom: 2px solid #FF1B23;
+    width: 65px;
+    padding-top: 20px;
+    margin: 0 auto; }
+main h3 {
+  font-size: 2.5rem; }
+
+footer {
+  color: #fff;
+  background-color: #282828; }
+  footer .footer-info-block {
+    padding: 24px 0 14px; }
+    footer .footer-info-block h3 {
+      margin-bottom: 2rem;
+      font-size: 1.7rem; }
+    footer .footer-info-block i, footer .footer-info-block p, footer .footer-info-block .social-media {
+      color: #ababab;
+      line-height: 2;
+      font-size: 1rem;
+      margin-bottom: 10px; }
+    footer .footer-info-block .row.col {
+      padding: 1.75rem 0 1.5rem; }
+    footer .footer-info-block .contactInfoBlock {
+      position: relative; }
+      footer .footer-info-block .contactInfoBlock i {
+        position: absolute;
+        font-size: 29px;
+        top: -15px; }
+      footer .footer-info-block .contactInfoBlock p, footer .footer-info-block .contactInfoBlock ul {
+        padding-left: 42px; }
+  footer .copyRight {
+    background-color: #000;
+    overflow: hidden;
+    padding: 22px 0px 5px; }
+
 @media screen and (max-width: 1020px) {
   header .full-screen-slider-block .slide-caption {
     bottom: 3%;
-    width: 60%; } }
+    width: 60%; }
+
+  .parallax-container .parralax-text .text-container {
+    width: 88%; } }
 @media screen and (max-width: 880px) {
   aside h1 {
     width: 120px;
@@ -238,7 +287,10 @@ footer {
 
   header .full-screen-slider-block .slide-caption .title {
     font-size: 3rem;
-    margin-bottom: 1rem; } }
+    margin-bottom: 1rem; }
+
+  .row .col.m4-custom {
+    width: 50%; } }
 @media screen and (max-width: 770px) {
   nav ul a {
     padding: 0 6px; }
@@ -258,6 +310,9 @@ footer {
 
   .showInPC {
     display: none !important; }
+
+  .parallax-container {
+    height: 250px; }
 
   header {
     padding-top: 4rem; }
@@ -367,7 +422,6 @@ footer {
   .icon-block {
     padding: 1rem 1rem 2rem; }
     .icon-block h3 {
-      font-size: 1.5rem;
       margin: 0.46rem 0 1rem 0; }
     .icon-block p {
       text-align: center; }
@@ -405,6 +459,17 @@ footer {
     width: 50%; }
 
   .grid-item--width3 {
+    width: 100%; }
+
+  .cards .card.design01 .name {
+    padding: 2.5rem 0 0.5rem; }
+
+  .parallax-container .parralax-text .text-container .title,
+  .cards .card.design01 .name,
+  .icon-block h3 {
+    font-size: 1.5rem; } }
+@media screen and (max-width: 600px) {
+  .row .col.s12 {
     width: 100%; } }
 @media screen and (max-width: 500px) {
   .slide-caption .description .desc {
@@ -417,6 +482,12 @@ footer {
   .copyRight .designer {
     float: none !important; }
   .copyRight .company {
-    margin-bottom: 1rem; } }
+    margin-bottom: 1rem; }
+
+  .cards .card .card-content {
+    padding-bottom: 0; }
+  .cards .card.design01 .card-image {
+    min-height: 0;
+    padding-top: 6.5rem; } }
 
 /*# sourceMappingURL=style.css.map */
